--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "express-basic-auth": "^1.2.1",
     "express-session": "^1.17.3",
     "fastify": "^4.24.3",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "supertest": "^6.3.4"
+    "supertest": "^6.3.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
