--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-basic-auth": "^1.2.1",
     "express-session": "^1.17.3",
     "fastify": "^4.24.3",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "supertest": "^6.3.4",
