--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "connect-mongo": "^5.1.0",
+    "connect-mongodb-session": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-basic-auth": "^1.2.1",
     "express-session": "^1.17.3",
     "fastify": "^4.24.3",
-    "mongodb": "^6.8.0",
+    "mongodb": "^6.13.0",
     "mongoose": "^8.6.0",
     "multer": "^1.4.5-lts.1",
     "supertest": "^6.3.4",
